--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "body-parser": "^1.18.2",
     "express": "^4.15.4",
     "jsonwebtoken": "^8.0.1",
     "pg": "^7.3.0"
